# mongo-tweets-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: example_tweet.json
docker/: Dockerfile  docker-compose.yml
scripts/: example_queries.py  show_caching.py  upload_tweets_data.py
src/mongo_tweets_api/: main.py
src/mongo_tweets_api/common/: dependencies.py
src/mongo_tweets_api/lib/: exceptions.py  schema.py
src/mongo_tweets_api/lib/mongo/: client.py  repository.py
src/mongo_tweets_api/mongo/: client.py  repository.py
src/mongo_tweets_api/routers/: tweets.py
