[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo_tweets_api"
version = "0.1.0"
authors = [
  { name="Piotr Cichacki", email="piotr.cichacki00@gmail.com" },
]
description = "Tweets service based on mongo database"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]